--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,12 +1,12 @@
 server {
-    listen 80 default_server;
+    listen 80;
     error_log /home/box/web/error.log;
     access_log /home/box/web/access.log;
     location ^~ /uploads/ {
         root /home/box/web/uploads;
         
     }
-    location ~* \.w\w\w?\w$ {
+    location ~* ^.+\.\w+$ {
         root /home/box/web/public;
     }
     location / {
