--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,7 +4,9 @@ server {
     access_log /home/box/web/access.log;
     location ^~ /uploads/ {
         root /home/box/web;
-        
+    }
+    location ^~ /hello/ {
+        proxy_pass http://127.0.0.1:8080;
     }
     location ~* ^.+\.\w+$ {
         root /home/box/web/public;
