--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    #error_log /home/box/web/error.log;
-    #access_log /home/box/web/access.log;
+    error_log /home/box/web/error.log;
+    access_log /home/box/web/access.log;
     location ^~ /uploads/ {
         root /home/box/web;
     }
