--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -11,6 +11,9 @@ server {
     #location ~* ^.+\.\w+$ {
     #    root /home/box/web/public;
     #}
+    location ^~ / {
+        proxy_pass http://127.0.0.1:8000;
+    }
     #location / {
     #    return 404;
     #}
